Last trainings with CV

--- a/CRF_OneModel_Interaction.ipynb
+++ b/CRF_OneModel_Interaction.ipynb
@@ -39,8 +39,8 @@
      "text": [
       "Number of training sentences readed:  27792\n",
       "Number of testing sentences readed:  5716\n",
-      "CPU times: user 2.04 s, sys: 297 ms, total: 2.33 s\n",
-      "Wall time: 2.34 s\n"
+      "CPU times: user 1.93 s, sys: 319 ms, total: 2.25 s\n",
+      "Wall time: 2.27 s\n"
      ]
     }
    ],
@@ -80,98 +80,123 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "             precision    recall  f1-score   support\n",
-      "\n",
-      "  mechanism      0.422     0.348     0.381       302\n",
-      "     effect      0.447     0.411     0.428       360\n",
-      "     advise      0.489     0.421     0.453       221\n",
-      "        int      0.741     0.208     0.325        96\n",
-      "\n",
-      "avg / total      0.478     0.374     0.409       979\n",
-      "\n",
-      "CPU times: user 44.3 s, sys: 240 ms, total: 44.5 s\n",
-      "Wall time: 44.6 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "\n",
-    "trainCRFAndEvaluate(\n",
-    "    X_train = X_train, \n",
-    "    y_train = y_train_type,\n",
-    "    X_test = X_test,\n",
-    "    y_test = y_test_type,\n",
-    "    labels = ['mechanism', 'effect', 'advise', 'int'],\n",
-    "    hyperparam_optim = False\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 10 candidates, totalling 30 fits\n"
+      "Fitting 10 folds for each of 20 candidates, totalling 200 fits\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=-1)]: Done  30 out of  30 | elapsed:  9.1min finished\n"
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "[Parallel(n_jobs=-1)]: Done  42 tasks      | elapsed: 20.4min\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "/Users/cesc/Anaconda3/anaconda/lib/python3.5/site-packages/sklearn/metrics/classification.py:1135: UndefinedMetricWarning: F-score is ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n",
+      "[Parallel(n_jobs=-1)]: Done 192 tasks      | elapsed: 89.4min\n",
+      "[Parallel(n_jobs=-1)]: Done 200 out of 200 | elapsed: 92.9min finished\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hyperparameter optimization took 596.2300851345062 seconds to complete\n",
+      "Hyperparameter optimization took 5623.31 seconds to complete\n",
+      "best params: {'c1': 0.27907302587547123, 'c2': 0.15843902369160145}\n",
+      "best CV score: 0.4362295226453767\n",
+      "model size: 1.68M\n",
       "             precision    recall  f1-score   support\n",
       "\n",
-      "  mechanism      0.445     0.391     0.416       302\n",
-      "     effect      0.436     0.419     0.428       360\n",
-      "     advise      0.438     0.430     0.434       221\n",
-      "        int      0.520     0.135     0.215        96\n",
+      "  mechanism      0.377     0.364     0.370       302\n",
+      "     advise      0.456     0.471     0.463       221\n",
+      "     effect      0.490     0.419     0.452       360\n",
+      "        int      0.591     0.135     0.220        96\n",
       "\n",
-      "avg / total      0.448     0.385     0.405       979\n",
+      "avg / total      0.457     0.386     0.407       979\n",
       "\n",
-      "CPU times: user 3min 21s, sys: 11.1 s, total: 3min 33s\n",
-      "Wall time: 10min 46s\n"
+      "CPU times: user 14min 31s, sys: 1min 20s, total: 15min 52s\n",
+      "Wall time: 1h 34min 40s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
     "\n",
-    "trainCRFAndEvaluate(\n",
+    "mod1 = trainCRFAndEvaluate(\n",
     "    X_train = X_train, \n",
     "    y_train = y_train_type,\n",
     "    X_test = X_test,\n",
     "    y_test = y_test_type,\n",
-    "    labels = ['mechanism', 'effect', 'advise', 'int'],\n",
-    "    hyperparam_optim = True\n",
-    ")"
+    "    labels = ['mechanism', 'advise', 'effect', 'int'],\n",
+    "    hyperparam_optim = True,\n",
+    "    n_cv = 10,\n",
+    "    n_iter = 20)\n",
+    "\n",
+    "'''\n",
+    "Hyperparameter optimization took 5623.31 seconds to complete\n",
+    "best params: {'c1': 0.27907302587547123, 'c2': 0.15843902369160145}\n",
+    "best CV score: 0.4362295226453767\n",
+    "model size: 1.68M\n",
+    "             precision    recall  f1-score   support\n",
+    "\n",
+    "  mechanism      0.377     0.364     0.370       302\n",
+    "     advise      0.456     0.471     0.463       221\n",
+    "     effect      0.490     0.419     0.452       360\n",
+    "        int      0.591     0.135     0.220        96\n",
+    "\n",
+    "avg / total      0.457     0.386     0.407       979\n",
+    "\n",
+    "CPU times: user 14min 31s, sys: 1min 20s, total: 15min 52s\n",
+    "Wall time: 1h 34min 40s\n",
+    "'''"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
